Build-in front json documents editor.
